# financial-reports-agent

./: .gitignore  Agent.md  LICENSE  PANDOC_GUIDE.md  PROJECT_INIT_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_ROADMAP.md  QUICKSTART.md  README.md  README_AGENT.md  USAGE_GUIDE.md  VENV_GUIDE.md  activate_venv.bat  activate_venv.sh  advanced_fraud_analysis.py  enhanced_fraud_analysis.py  main.py  pyproject.toml  requirements.txt  requirements_agent.txt  requirements_old.txt  role.md  run_agent.py  setup.py  test_core_modules.py  test_report.md  test_utils.py
.codeartsdoer/specs/financial_analysis/: design.md  spec.md  tasks.md
.codeartsdoer/specs/financial_report_utils/: spec.md
agents/financial_analysis/: agent.yaml
backup_agent_config/: config.yaml  industry_benchmarks.yaml  risk_thresholds.yaml
backup_agent_config/agents/data_extraction/: agent.yaml
backup_agent_config/agents/report_generation/: agent.yaml
backup_agent_config/agents/risk_assessment/: agent.yaml
backup_agent_config/configs/: __init__.py  thresholds.py  thresholds.yaml  weights.py
backup_agent_config/workflows/: role_based_analysis.yaml
backup_old_analysis/: analyze_fraud.py
configs/: __init__.py  main_config.yaml  role_based_config.yaml  thresholds.py  thresholds.yaml  weights.py  weights.yaml
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-04-16-critical-remediation.md  2026-04-17-roadmap-refresh.md
docs/superpowers/specs/: 2026-04-16-critical-remediation-design.md  2026-04-16-financial-fraud-index-design.md  2026-04-17-roadmap-refresh-design.md
examples/: __init__.py  advanced_usage.py  basic_usage.py
scripts/: __init__.py  analyze_fraud.py  batch_analyze.py
skill_release/financial-fraud-index/: README.md  SKILL.md
skills/: .skills_store_lock.json
skills/data_analysis/: skill.yaml
skills/pdf_processing/: skill.yaml
skills/report_writing/: skill.yaml
skills/risk_detection/: skill.yaml
source/: README.md  agent财务异常与造假风险分析.md  英洛华2025年报异常分析的完整过程与逻辑推导.md
src/: __init__.py  cli.py  main.py
src/core/: __init__.py  analyzer.py  data_extractor.py  fraud_detector.py  indicator_calculator.py  md_converter.py  pdf_extractor.py  pdf_table_extractor.py  report_generator.py  risk_assessor.py  risk_detector.py  trend_analyzer.py
src/models/: README.md  __init__.py  config.py  financial_data.py  fraud_indicators.py  indicators.py  report.py  report_model.py  risk.py
src/utils/: README.md  __init__.py  calculation_utils.py  config_loader.py  file_manager.py  file_utils.py  logger.py  logging_utils.py  validation_utils.py  validator.py
tests/: __init__.py  conftest.py  test_analyzer_workflow.py  test_cli_smoke.py  test_core.py  test_data_extractor.py  test_fraud_detector.py  test_indicator_calculator.py  test_integration.py  test_logging_behavior.py  test_models.py  test_pdf_sample_regressions.py  test_project_metadata.py  test_report_generator.py  test_risk_detector.py  test_utils.py
tests/fixtures/: pdf_regression_cases.json
workflows/: financial_analysis_workflow.yaml
